fixed the text wrap around radio buttons and checkboxes on new inquiry form

--- a/ims-react/src/assets/stylesheets/base.scss
+++ b/ims-react/src/assets/stylesheets/base.scss
@@ -32,3 +32,7 @@ html, body, #root, .App {
   float:left;
   display: block;
 }
+
+.form-check-inline {
+  align-items: baseline;
+}
